# Time_Decoupled_Law

./: README.md  Whitepaper.md  manifest.yaml
formal/: TASM.lean
research/: 01_TASM_Mathematical_Core.md  02_ISC_Artifact.md  03_The_Economics_of_Absence.md  04_Product_Roadmap.md  05_Strategic_Research_Plan.md  06_Kernel_Architecture_Design.md  07_Substrate_Pallet_Design.md  08_Canonical_Certification.md  09_Certification_Procedure.md  10_Time_Oracle_Hybrid_Architecture.md
tasm-kernel/: Cargo.toml
tasm-kernel/src/: engine.rs  lib.rs  main.rs  model.rs
tasm-node/pallet-tasm/: Cargo.toml
tasm-node/pallet-tasm/src/: lib.rs
verification/: 01_Invariant_Mapping.md
